Bug 319999 - XPCOM Shutdown: xpcom-shutdown-threads notification and cleanup of event queues before component manager shutdown, r=darin